--- a/week/index.css
+++ b/week/index.css
@@ -60,25 +60,48 @@ span{
 }
 
 @media(max-width: 992px){
-   div	{
+   div{
    	width:30%;
    	height:20%;
-
-	}
+   }
 }
 
 @media(max-width:991px)and (min-width:767px){
-	div{
-		width:50%;
-		height:40%;
+	.chicken{
+		width:90%;
+		height:30%;
+
 	}
+
+.beef{
+	clear:left;
+	width:90%;
+	height:30%;
+}
+.sushi{
+	clear:left;
+	width:90%;
+	height:30%;
+}
 }
 
 @media(max-width:763px){
-	div{
-		width:100%;
-		height:40%;
+	.chicken{
+		width:90%;
+		height:30%;
+
 	}
+
+.beef{
+	clear:left;
+	width:90%;
+	height:30%;
+}
+.sushi{
+	clear:left;
+	width:90%;
+	height:30%;
+}
 }
 
 
