--- a/week/index.css
+++ b/week/index.css
@@ -1,11 +1,22 @@
 h1{
 	color:red;
 	text-align:center;
+	font-weight:bold;
+	text-transform:capitalize;
+	background-color: blue;
+	margin:5px;
+	font-family:verdana;
+	border:1px solid black;
 }
 
+body{
+	background:maroon;
+	overflow:scroll;
+}
 div{
 	float:left;
 	margin-right:10px;
+	font-family:sans-serif;
 }
 
 
@@ -14,14 +25,15 @@ div{
 	box-sizing:border-box;
 	margin:15px;
 	padding:7px;
+	cursor: pointer;
 }
 
 
 .chicken{
-	border:4px solid green;
+	border:4px solid blue ;
 	display:block;
-	background-color:black;
-	color:white;
+	background-color:grey;
+	color:maroon;
 	width:30%;
 	margin-top:0;
 	padding:0;
@@ -53,7 +65,7 @@ div{
 span{
 	display:block;
 	color:red;
-	background-color:white;
+	background-color:blue;
 	float:right;
 	margin:0;
 	padding:0;
