--- a/week/index.css
+++ b/week/index.css
@@ -3,7 +3,7 @@ h1{
 	text-align:center;
 	font-weight:bold;
 	text-transform:capitalize;
-	background-color: blue;
+	background-color: yellow;
 	margin:5px;
 	font-family:verdana;
 	border:1px solid black;
@@ -30,9 +30,9 @@ div{
 
 
 .chicken{
-	border:4px solid blue ;
+	border:4px solid yellow ;
 	display:block;
-	background-color:grey;
+	background-color:black;
 	color:maroon;
 	width:30%;
 	margin-top:0;
@@ -41,9 +41,9 @@ div{
 	
 }
 .beef{
-	border:4px solid blue;
+	border:4px solid yellow;
 	display:block;
-	background-color:orange;
+	background-color:black;
 	color:blue;
 	width:30%;
 	margin-top:0;
@@ -65,7 +65,7 @@ div{
 span{
 	display:block;
 	color:red;
-	background-color:blue;
+	background-color:yellow;
 	float:right;
 	margin:0;
 	padding:0;
@@ -118,6 +118,11 @@ span{
 }
 }
 
+span:hover{
+	background-color:maroon;
+	text-transform:capitalize;
+	color:black;
+}
 
 
 
