--- a/week/index.css
+++ b/week/index.css
@@ -17,6 +17,13 @@ div{
 	float:left;
 	margin-right:10px;
 	font-family:sans-serif;
+	margin-top:15px;
+	padding:15px;
+}
+
+
+p{
+	margin-top:40px;
 }
 
 
@@ -24,7 +31,6 @@ div{
 *{
 	box-sizing:border-box;
 	margin:15px;
-	padding:7px;
 	cursor: pointer;
 }
 
@@ -35,9 +41,10 @@ div{
 	background-color:black;
 	color:maroon;
 	width:30%;
-	margin-top:0;
+	margin-top:0px;
 	padding:0;
 	height:20%;
+	clear:both;
 	
 }
 .beef{
@@ -58,7 +65,7 @@ div{
 	background-color:black;
 	color:grey;
 	width:30%;
-	margin-top:0;
+	margin-top:0px;
 	padding:0;
 	height:20%;
 }
@@ -69,12 +76,15 @@ span{
 	float:right;
 	margin:0;
 	padding:0;
+	border:2px solid maroon;
 }
 
 @media(max-width: 992px){
    div{
    	width:30%;
    	height:20%;
+   	margin:15px;
+   	padding:15px;
    }
 }
 
@@ -94,7 +104,7 @@ span{
 	
  .sushi{
 	
-	width:40%;
+	width:83%;
   height:30%;
 }
 }
@@ -122,6 +132,7 @@ span:hover{
 	background-color:maroon;
 	text-transform:capitalize;
 	color:black;
+
 }
 
 
