--- a/week/index.css
+++ b/week/index.css
@@ -113,6 +113,7 @@ span{
 	.chicken{
 		width:100%;
 		height:30%;
+		margin:auto;
 
 	}
 
@@ -120,11 +121,13 @@ span{
 	clear:left;
 	width:100%;
 	height:30%;
+	margin:auto;
 }
 .sushi{
 	clear:left;
 	width:100%;
 	height:30%;
+	margin:auto ;
 }
 }
 
