--- a/week/index.css
+++ b/week/index.css
@@ -18,6 +18,7 @@ div{
 	
 	font-family:sans-serif;
 	margin:10px;
+	margin-bottom: :10px;
 
 	padding:15px;
 
@@ -116,6 +117,7 @@ span{
 		width:100%;
 		height:30%;
 		margin:auto;
+		margin-bottom:10px;
 
 	}
 
@@ -124,6 +126,7 @@ span{
 	width:100%;
 	height:30%;
 	margin:auto;
+	margin-bottom:10px;
 }
 .sushi{
 	clear:left;
